# doc-worker

./: .env.example  .gitignore  Dockerfile  README.md  config.example.yml  docker-compose.yml  pyproject.toml
src/doc_worker/: __init__.py  alias.py  config.py  documents.py  mailbox.py  main.py  senders.py
src/doc_worker/backends/: __init__.py  base.py  factory.py  infomaniak.py  mistral.py
tests/: test_alias.py  test_mailbox.py  test_sender.py
